Adding precompiled